tests/ui/regions/regions-undeclared.stderr
error[E0261]: use of undeclared lifetime name `'blk`
  --> $DIR/regions-undeclared.rs:1:14
   |
LL | static c_x: &'blk isize = &22;
   |              ^^^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-undeclared.rs:4:10
   |
LL |     Foo(&'a isize),
   |          ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
LL | enum EnumDecl<'a> {
   |              ++++

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-undeclared.rs:5:10
   |
LL |     Bar(&'a isize),
   |          ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
LL | enum EnumDecl<'a> {
   |              ++++

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-undeclared.rs:8:15
   |
LL | fn fnDecl(x: &'a isize,
   |               ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
LL | fn fnDecl<'a>(x: &'a isize,
   |          ++++

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/regions-undeclared.rs:9:15
   |
LL |           y: &'a isize)
   |               ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
LL | fn fnDecl<'a>(x: &'a isize,
   |          ++++

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0261`.
